# cookiecutter-cpp

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_name }}/: .clang-tidy  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt
{{ cookiecutter.project_name }}/app/: CMakeLists.txt
{{ cookiecutter.project_name }}/app/{{ cookiecutter.app_name }}/: main.cpp
{{ cookiecutter.project_name }}/include/{{ cookiecutter.project_name }}/: public.hpp
{{ cookiecutter.project_name }}/src/: CMakeLists.txt
{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_name }}/: hello.cpp  hello.hpp
{{ cookiecutter.project_name }}/test_package/: example.cpp
{{ cookiecutter.project_name }}/tests/: CMakeLists.txt
{{ cookiecutter.project_name }}/tests/{{ cookiecutter.project_name }}/: test_main.cpp  test_{{ cookiecutter.project_name }}.cpp
